fix match list not showing

--- a/src/components/leaderboards/team-profile/team-profile.module.css
+++ b/src/components/leaderboards/team-profile/team-profile.module.css
@@ -7,6 +7,10 @@
         opacity: 1;
     }
 }
+.loader {
+    display: block !important;
+    margin: auto;
+}
 .container {
     display: flex;
     flex-direction: row;
